--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="btn-container">
       <button id="login-btn"><a href="/login">Login</a></button>
-      <button id="signup-btn"><a href="/signup">Signup</a></button>
+      <button id="signup-btn"><a href="/registration">Signup</a></button>
       <button id="logout-btn">Logout</button>
     </div>
     <h1 id="greeting"></h1>
