--- a/views/login/index.html
+++ b/views/login/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <form id="login-form">
-      <input type="text" placeholder="username" id="username" />
-      <input type="text" placeholder="password" id="password" />
+      <input type="text" placeholder="email" id="login-email" />
+      <input type="text" placeholder="password" id="login-password" />
       <button type="submit">Login</button>
     </form>
     <script src="script.js"></script>
