working views and product controllers

--- a/views/login/index.html
+++ b/views/login/index.html
@@ -10,6 +10,7 @@
       <input type="text" placeholder="email" id="login-email" />
       <input type="text" placeholder="password" id="login-password" />
       <button type="submit">Login</button>
+      <button id="signup-btn"><a href="/registration">Go To Signup</a></button>
     </form>
     <script src="script.js"></script>
   </body>
