--- a/views/registration/index.html
+++ b/views/registration/index.html
@@ -11,6 +11,8 @@
       <input type="text" placeholder="email" id="reg-email" />
       <input type="text" placeholder="password" id="reg-password" />
       <button type="submit">Signup</button>
+
+      <button id="login-btn"><a href="/login">Go To Login</a></button>
     </form>
     <script src="script.js"></script>
   </body>
