--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,9 @@
       <button id="login-btn"><a href="/login">Login</a></button>
       <button id="signup-btn"><a href="/registration">Signup</a></button>
       <button id="logout-btn">Logout</button>
+      <button id="home-btn"><a href="/home">Home</a></button>
     </div>
     <h1 id="greeting"></h1>
-    <a href="/todo">Todo Page</a>
     <script src="script.js"></script>
   </body>
 </html>
