--- a/views/product/index.html
+++ b/views/product/index.html
@@ -6,7 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <div>dam</div>
+  <button id="home-btn"><a href="/home">Home</a></button>
+  <div id="product-container"></div>
 
+  <script src="../../script2.js"></script>
 </body>
 </html>
