--- a/views/product/index.html
+++ b/views/product/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <button id="home-btn"><a href="/home">Home</a></button>
-  <div id="product-container"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <button id="home-btn"><a href="/home">Home</a></button>
+    <div id="product-container"></div>
+    <h2>Related Products</h2>
 
-  <script src="../../script2.js"></script>
-</body>
+    <div id="related-products"></div>
+
+    <script src="../../productScript.js"></script>
+  </body>
 </html>
