improved brands on fake data and added filtering by brand

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -55,6 +55,17 @@
         </div>
 
         <h1>Product Gallery</h1>
+        <div>Filter By Brand</div>
+
+        <select type="dropdown" id="brand-select">
+          <option value="">All Categories</option>
+          <option value="Apple">Apple</option>
+          <option value="Samsung">Samsung</option>
+          <option value="Google">Google</option>
+          <option value="Ford">Ford</option>
+          <option value="Toyota">Toyota</option>
+        </select>
+
         <div class="gallery" id="productGallery"></div>
 
         <div class="pagination">
@@ -62,8 +73,7 @@
           <button id="next-btn">Next</button>
         </div>
       </div>
-      <div id="sidebar">
-      </div>
+      <div id="sidebar"></div>
     </div>
 
     <script src="script.js"></script>
