--- a/views/product/index.html
+++ b/views/product/index.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 20px;
+      }
+      #home-btn {
+        margin-bottom: 20px;
+      }
+      #related-products {
+        display: flex;
+        justify-content: space-between;
+      }
+      #related-products img {
+        max-width: 100%;
+        height: auto;
+      }
+      #product-container {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 50px;
+      }
+      .product-details{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        margin-left: 50px;
+      }
+    </style>
   </head>
   <body>
     <button id="home-btn"><a href="/home">Home</a></button>
