--- a/views/home/index.html
+++ b/views/home/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      a {
+        color: black;
+        text-decoration: none;
+      }
       body {
         font-family: Arial, sans-serif;
         padding: 20px;
