--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      a {
+        color: black;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <div id="btn-container">
-      <button id="login-btn"><a href="/login">Login</a></button>
-      <button id="signup-btn"><a href="/registration">Signup</a></button>
-      <button id="logout-btn">Logout</button>
-      <button id="home-btn"><a href="/home">Home</a></button>
+      <button id="login-btn" class="nav-btn"><a href="/login">Login</a></button>
+      <button id="signup-btn" class="nav-btn"><a href="/registration">Signup</a></button>
+      <button id="logout-btn" class="nav-btn">Logout</button>
+      <button id="home-btn" class="nav-btn"><a href="/home">Home</a></button>
     </div>
     <h1 id="greeting"></h1>
     <script src="script.js"></script>
