--- a/views/login/index.html
+++ b/views/login/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      a {
+        color: black;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <form id="login-form">
