--- a/views/product/index.html
+++ b/views/product/index.html
@@ -32,6 +32,10 @@
         align-items: flex-start;
         margin-left: 50px;
       }
+      a {
+        color: black;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
